--- a/build.gradle
+++ b/build.gradle
@@ -161,11 +161,14 @@ publishing {
 }
 
 signing {
-  sign publishing.publications.mavenJava
+  sign(publishing.publications.mavenJava)
 }
 
 nexusPublishing {
   repositories {
-    sonatype()
+    sonatype {
+      nexusUrl.set(uri('https://s01.oss.sonatype.org/service/local/'))
+      snapshotRepositoryUrl.set(uri('https://s01.oss.sonatype.org/content/repositories/snapshots/'))
+    }
   }
 }
