--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,45 +11,47 @@ executors:
           TERM: dumb
 
 commands:
-  install-jvm:
+  install-jdk:
     description: Install and setup the JVM environmnet
+    parameters:
+      version:
+        description: The JDK version to use
+        type: string
+        default: jdk-18
 
     steps:
       - run:
           name: Get JDK SHA256
           command: |
             mkdir ~/jdk
-            wget "https://download.oracle.com/java/18/latest/jdk-18_linux-x64_bin.tar.gz.sha256" -O ~/jdk/jdk-18.sha256
-
+            wget "https://download.oracle.com/java/18/latest/<<parameters.version>>_linux-x64_bin.tar.gz.sha256" -O ~/jdk/<<parameters.version>>.sha256
       - restore_cache:
-          key: v1-jdk-18-{{ checksum "~/jdk/jdk-18.sha256" }}
+          key: v1-<<parameters.version>>-{{ checksum "~/jdk/<<parameters.version>>.sha256" }}
 
       - run:
-          name: Download JDK 18.0.1.1
+          name: Download JDK 18
           command: |
-            if [ ! -f ~/jdk/jdk-18.tar.gz ]; then
-              wget -nc https://download.oracle.com/java/18/latest/jdk-18_linux-x64_bin.tar.gz -O ~/jdk/jdk-18.tar.gz
+            if [ ! -f ~/jdk/<<parameters.version>>.tar.gz ]; then
+              wget -nc https://download.oracle.com/java/18/latest/<<parameters.version>>_linux-x64_bin.tar.gz -O ~/jdk/<<parameters.version>>.tar.gz
             fi
-
       - run:
           name: Install JDK
           command: |
-            sudo tar xvf ~/jdk/jdk-18.tar.gz -C ~/jdk/
-            sudo mv ~/jdk/jdk-18.0.1.1/ /opt/
-            echo 'export JAVA_HOME=/opt/jdk-18.0.1.1' >> $BASH_ENV
+            sudo tar xvf ~/jdk/<<parameters.version>>.tar.gz -C ~/jdk/
+            sudo mkdir /opt/<<parameters.version>>
+            sudo mv ~/jdk/<<parameters.version>>*/* /opt/<<parameters.version>>
+            echo 'export JAVA_HOME=/opt/<<parameters.version>>' >> $BASH_ENV
             echo 'export PATH=$PATH:$JAVA_HOME/bin' >> $BASH_ENV
             source $BASH_ENV
-
       - run:
           name: Check Java version
           command: |
             echo $JAVA_HOME
             java --version
-
       - save_cache:
           paths:
-            - ~/jdk/jdk-18.tar.gz
-          key: v1-jdk-18-{{ checksum "~/jdk/jdk-18.sha256" }}
+            - ~/jdk/<<parameters.version>>.tar.gz
+          key: v1-<<parameters.version>>-{{ checksum "~/jdk/<<parameters.version>>.sha256" }}
 
   setup:
     description: "Setup the environment to run tasks on CI"
@@ -86,7 +88,7 @@ jobs:
     executor: default
 
     steps:
-      - install-jvm
+      - install-jdk
 
       - setup
 
@@ -122,7 +124,7 @@ jobs:
     executor: default
 
     steps:
-      - install-jvm
+      - install-jdk
 
       - setup
 
@@ -134,7 +136,7 @@ jobs:
     executor: default
 
     steps:
-      - install-jvm
+      - install-jdk
 
       - setup
 
@@ -152,7 +154,7 @@ workflows:
             - build
           filters:
             branches:
-              only: master
+              only: main
 
       - publish-release:
           requires:
