--- a/.circleci/codecov.yml
+++ b/.circleci/codecov.yml
@@ -1,8 +1,9 @@
 codecov:
-  require_ci_to_pass: yes
+  require_ci_to_pass: true
 
 coverage:
   status:
     project:
-      target: 90%
-      threshold: 5%
+      default:
+        target: 90.0
+        threshold: "0%"
