--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,12 @@ build
 
 # Gradle Wrapper
 !gradle/wrapper/gradle-wrapper.jar
+
+# NodeJS
+node_modules/
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
