--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -42,6 +42,7 @@ jobs:
     needs: build
 
     steps:
-      - uses: actions/deploy-pages@v1
+      - name: Deploy Pages
+        uses: actions/deploy-pages@v1
 
 ...
