--- a/build.gradle
+++ b/build.gradle
@@ -11,17 +11,17 @@ plugins {
   id 'maven-publish'
   id 'signing'
 
-  id 'io.github.joselion.pretty-jupiter' version '2.0.1'
-  id 'io.github.joselion.strict-null-check' version '2.0.0'
+  id 'io.github.joselion.pretty-jupiter' version '2.2.0'
+  id 'io.github.joselion.strict-null-check' version '2.1.0'
   id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
-  id 'se.solrike.sonarlint' version '1.0.0-beta.5'
+  id 'se.solrike.sonarlint' version '1.0.0-beta.8'
 }
 
 group = 'io.github.joselion'
 
 java {
   toolchain {
-    languageVersion = JavaLanguageVersion.of(18)
+    languageVersion = JavaLanguageVersion.of(19)
     vendor = JvmVendorSpec.ORACLE
   }
 
@@ -61,15 +61,17 @@ strictNullCheck {
 
 sonarlint {
   excludeRules = [
-    'java:S4032' // Allow packages only containing `package-info.java`
+    'java:S107', // Allow constructors with more than 7 parameters
+    'java:S3776', // Allow methods with more than 15 lines
+    'java:S4032', // Allow packages only containing `package-info.java`
   ]
   includeRules = [
-    'java:S4266' // "Stream.collect()" calls should not be redundant
+    'java:S4266', // "Stream.collect()" calls should not be redundant
   ]
 }
 
 checkstyle {
-  toolVersion = '10.3.3'
+  toolVersion = '10.6.0'
   sourceSets = sourceSets
 }
 
@@ -86,16 +88,16 @@ repositories {
 }
 
 dependencies {
-  sonarlintPlugins('org.sonarsource.java:sonar-java-plugin:7.13.0.29990')
+  sonarlintPlugins('org.sonarsource.java:sonar-java-plugin:7.16.0.30901')
 
-  testImplementation('org.assertj:assertj-core:3.23.1')
-  testImplementation('org.mockito:mockito-inline:4.8.0')
+  testImplementation('org.assertj:assertj-core:3.24.1')
+  testImplementation('org.mockito:mockito-inline:4.11.0')
 }
 
 testing {
   suites {
     test {
-      useJUnitJupiter('5.9.0')
+      useJUnitJupiter('5.9.2')
     }
   }
 }
