feat(deps): Update dependencies 2023.06.04

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,6 @@ signing.secretKeyRingFile=lion-keyring.asc
 
 sonatypeUsername={SONATYPE_USERNAME_TOKEN}
 sonatypePassword={SONATYPE_PASSWORD_TOKEN}
+
+org.gradle.parallel=true
+org.gradle.caching=true
