--- a/build.gradle
+++ b/build.gradle
@@ -11,17 +11,17 @@ plugins {
   id 'maven-publish'
   id 'signing'
 
-  id 'io.github.joselion.pretty-jupiter' version '2.2.0'
-  id 'io.github.joselion.strict-null-check' version '2.1.0'
-  id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
-  id 'se.solrike.sonarlint' version '1.0.0-beta.8'
+  id 'io.github.joselion.pretty-jupiter' version '2.2.1'
+  id 'io.github.joselion.strict-null-check' version '2.2.0'
+  id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
+  id 'se.solrike.sonarlint' version '1.0.0-beta.15'
 }
 
 group = 'io.github.joselion'
 
 java {
   toolchain {
-    languageVersion = JavaLanguageVersion.of(19)
+    languageVersion = JavaLanguageVersion.of(20)
     vendor = JvmVendorSpec.ORACLE
   }
 
@@ -57,6 +57,11 @@ strictNullCheck {
     |@since v1.0.2
   |"""
   .stripMargin()
+
+  versions {
+    eclipseAnnotations = '2.2.700'
+    findBugs = '3.0.2'
+  }
 }
 
 sonarlint {
@@ -71,12 +76,12 @@ sonarlint {
 }
 
 checkstyle {
-  toolVersion = '10.6.0'
+  toolVersion = '10.12.0'
   sourceSets = sourceSets
 }
 
 jacoco {
-  toolVersion = '0.8.8'
+  toolVersion = '0.8.10'
 }
 
 dependencyLocking {
@@ -88,16 +93,16 @@ repositories {
 }
 
 dependencies {
-  sonarlintPlugins('org.sonarsource.java:sonar-java-plugin:7.16.0.30901')
+  sonarlintPlugins('org.sonarsource.java:sonar-java-plugin:7.20.0.31692')
 
-  testImplementation('org.assertj:assertj-core:3.24.1')
-  testImplementation('org.mockito:mockito-inline:4.11.0')
+  testImplementation('org.assertj:assertj-core:3.24.2')
+  testImplementation('org.mockito:mockito-inline:5.2.0')
 }
 
 testing {
   suites {
     test {
-      useJUnitJupiter('5.9.2')
+      useJUnitJupiter('5.9.3')
     }
   }
 }
