--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,15 @@ plugins {
   id 'io.github.joselion.pretty-jupiter' version '2.2.1'
   id 'io.github.joselion.strict-null-check' version '2.2.0'
   id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
+  id 'me.champeau.mrjar' version '0.1.1'
   id 'se.solrike.sonarlint' version '1.0.0-beta.15'
 }
 
 group = 'io.github.joselion'
+
+multiRelease {
+  targetVersions(20, 11)
+}
 
 java {
   toolchain {
@@ -30,7 +35,7 @@ java {
 }
 
 javadoc {
-  if(JavaVersion.current().isJava9Compatible()) {
+  if (JavaVersion.current().isJava9Compatible()) {
     options.addBooleanOption('html5', true)
   }
 
@@ -90,6 +95,11 @@ dependencyLocking {
 
 repositories {
   mavenCentral()
+}
+
+configurations {
+  java11Implementation.extendsFrom(implementation)
+  java11CompileOnly.extendsFrom(compileOnly)
 }
 
 dependencies {
