--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,10 +1,10 @@
 ---
-
 name: Pages
 
 on:
-  push:
-    branches: [release]
+  workflow_call:
+  workflow_dispatch:
+  
 
 permissions:
   contents: read
@@ -13,26 +13,20 @@ permissions:
 
 concurrency:
   group: pages
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v2
-
-      - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
+      - uses: actions/checkout@v4
+      - uses: actions/configure-pages@v3
+      - uses: actions/jekyll-build-pages@v1
         with:
           source: ./
           destination: ./_site
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+      - uses: actions/upload-pages-artifact@v2
 
   deploy:
     environment:
@@ -42,7 +36,5 @@ jobs:
     needs: build
 
     steps:
-      - name: Deploy Pages
-        uses: actions/deploy-pages@v1
-
-...
+      - uses: actions/deploy-pages@v2
+        id: deployment
