fix(jar): Manifest missing attributes

--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,14 @@ jar {
   from(sourceSets.main.allSource)
   manifest {
     attributes(
+      'Build-Jdk': "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})",
+      'Build-Jdk-Spec': java.sourceCompatibility,
+      'Build-Timestamp': LocalDateTime.now().toString(),
+      'Created-By': "Gradle ${gradle.gradleVersion}",
       'Implementation-Title': project.name,
+      'Implementation-Vendor': 'Jose Luis Leon',
       'Implementation-Version': project.version,
+      'Package': "${project.group}.${project.name}",
     )
   }
 }
