--- a/build.gradle
+++ b/build.gradle
@@ -180,6 +180,10 @@ publishing {
 }
 
 signing {
+  def signingKey = findProperty("signingKey")
+  def signingPassword = findProperty("signingPassword")
+
+  useInMemoryPgpKeys(signingKey, signingPassword)
   sign(publishing.publications.mavenJava)
 }
 
