chore(deps): Use Gradle version catalog

--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ jar {
 }
 
 sonarLint {
-  setToolVersion('9.2.0.74516')
+  setToolVersion(libs.versions.sonarlint.core.get())
   languages {
     include('java')
   }
@@ -80,13 +80,14 @@ strictNullCheck {
     javadoc = """\
       @author Jose Luis Leon
       @since v1.0.2
-      """.stripIndent()
+      """
+      .stripIndent()
   }
   source.addEclipse()
 }
 
 checkstyle {
-  setToolVersion('10.12.3')
+  setToolVersion(libs.versions.checkstyle.get())
 }
 
 dependencyLocking {
@@ -98,9 +99,9 @@ repositories {
 }
 
 dependencies {
-  sonarlintCorePlugins('org.sonarsource.java:sonar-java-plugin:7.24.0.32100')
+  sonarlintCorePlugins(libs.sonarlint.java)
   constraints {
-    sonarlintCore('org.apache.tomcat.embed:tomcat-embed-core:9.0.80') {
+    sonarlintCore(libs.tomcat.jasper) {
       because('version 9.0.75 has a security vulnerability')
     }
   }
@@ -109,10 +110,10 @@ dependencies {
 testing {
   suites {
     test {
-      useJUnitJupiter('5.10.0')
+      useJUnitJupiter(libs.versions.junit.get())
       dependencies {
-        implementation('org.assertj:assertj-core:3.24.2')
-        implementation('org.mockito:mockito-core:5.5.0')
+        implementation(libs.assertj)
+        implementation(libs.mockito)
       }
     }
   }
@@ -126,7 +127,7 @@ prettyJupiter {
 }
 
 jacoco {
-  toolVersion('0.8.10')
+  setToolVersion(libs.versions.jacoco.get())
 }
 
 jacocoTestReport {
