--- a/settings.gradle
+++ b/settings.gradle
@@ -7,15 +7,20 @@ rootProject.name = 'maybe'
 dependencyResolutionManagement {
   versionCatalogs {
     libs {
-      version('checkstyle', '10.12.3')
-      version('jacoco', '0.8.10')
+      version('checkstyle', '10.12.4')
+      version('jacoco', '0.8.11')
       version('junit', '5.10.0')
-      version('sonarlint-core', '9.2.0.74516')
+      version('sonarlint-core', '9.4.0.76070')
+
+      plugin('mrjar', 'me.champeau.mrjar').version('0.1.1')
+      plugin('prettyJupiter', 'io.github.joselion.pretty-jupiter').version('3.1.0')
+      plugin('publishPlugin', 'io.github.gradle-nexus.publish-plugin').version('2.0.0-rc-1')
+      plugin('sonarlint', 'name.remal.sonarlint').version('3.3.14')
+      plugin('strictNullCheck', 'io.github.joselion.strict-null-check').version('3.2.0')
 
       library('assertj', 'org.assertj', 'assertj-core').version('3.24.2')
-      library('mockito', 'org.mockito', 'mockito-core').version('5.5.0')
-      library('sonarlint-java', 'org.sonarsource.java', 'sonar-java-plugin').version('7.24.0.32100')
-      library('tomcat-jasper', 'org.apache.tomcat.embed', 'tomcat-embed-jasper').version('9.0.80')
+      library('mockito', 'org.mockito', 'mockito-core').version('5.7.0')
+      library('sonarlint-java', 'org.sonarsource.java', 'sonar-java-plugin').version('7.27.1.33504')
     }
   }
 }
