feat(deps): Update dependencies 2023.12.12

--- a/build.gradle
+++ b/build.gradle
@@ -93,6 +93,13 @@ dependencyLocking {
   lockAllConfigurations()
 }
 
+// Workaround for: https://github.com/checkstyle/checkstyle/issues/14211
+configurations.checkstyle {
+  resolutionStrategy.capabilitiesResolution.withCapability("com.google.collections:google-collections") {
+    select("com.google.guava:guava:0")
+  }
+}
+
 repositories {
   mavenCentral()
 }
