feat(deps): Update dependencies 2024.02.13

--- a/build.gradle
+++ b/build.gradle
@@ -60,11 +60,7 @@ strictNullCheck {
   addEclipse()
   packageInfo {
     useEclipse()
-    javadoc = """\
-      @author Jose Luis Leon
-      @since v1.0.2
-      """
-      .stripIndent()
+    javadoc = '@author Jose Luis Leon'
   }
 }
 
