--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,7 @@ concurrency:
 jobs:
   build:
     uses: ./.github/workflows/ci.yml
+    secrets: inherit
 
   deploy:
     runs-on: ubuntu-latest
@@ -23,12 +24,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v4
         with:
           distribution: oracle
-          java-version: 21
+          java-version: 22
           check-latest: true
       - uses: gradle/actions/setup-gradle@v3
+      - uses: gradle/actions/wrapper-validation@v3
       - uses: actions/setup-node@v4
         with:
           node-version-file: .nvmrc
