--- a/settings.gradle
+++ b/settings.gradle
@@ -7,20 +7,19 @@ rootProject.name = 'maybe'
 dependencyResolutionManagement {
   versionCatalogs {
     libs {
-      version('checkstyle', '10.13.0')
-      version('jacoco', '0.8.11')
+      version('checkstyle', '10.17.0')
+      version('jacoco', '0.8.12')
       version('junit', '5.10.2')
-      version('sonarlint-core', '9.8.0.76914')
 
       plugin('mrjar', 'me.champeau.mrjar').version('0.1.1')
-      plugin('prettyJupiter', 'io.github.joselion.pretty-jupiter').version('3.2.0')
-      plugin('publishPlugin', 'io.github.gradle-nexus.publish-plugin').version('2.0.0-rc-2')
-      plugin('sonarlint', 'name.remal.sonarlint').version('3.4.6')
-      plugin('strictNullCheck', 'io.github.joselion.strict-null-check').version('3.3.0')
+      plugin('prettyJupiter', 'io.github.joselion.pretty-jupiter').version('3.4.0')
+      plugin('publishPlugin', 'io.github.gradle-nexus.publish-plugin').version('2.0.0')
+      plugin('sonarlint', 'name.remal.sonarlint').version('4.2.3')
+      plugin('strictNullCheck', 'io.github.joselion.strict-null-check').version('3.4.0')
 
-      library('assertj', 'org.assertj', 'assertj-core').version('3.25.3')
-      library('mockito', 'org.mockito', 'mockito-core').version('5.10.0')
-      library('sonarlint-java', 'org.sonarsource.java', 'sonar-java-plugin').version('7.30.1.34514')
+      library('assertj', 'org.assertj', 'assertj-core').version('3.26.0')
+      library('mockito', 'org.mockito', 'mockito-core').version('5.12.0')
+      library('sonarlint-java', 'org.sonarsource.java', 'sonar-java-plugin').version('8.0.1.36337')
     }
   }
 }
