--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "packageManager": "yarn@4.1.0",
   "engines": {
-    "node": "22.3.0"
+    "node": "^22.4.1"
   },
   "scripts": {
     "release": "semantic-release"
